# c

./: .gitignore  CHANGES.md  CMakeLists.txt  NEWS.md  README.md  TIPS.md
cmake/docs/: CMAKE.md
cmake/example/: CMakeLists.txt  README.md
cmake/example/libs/math/: CMakeLists.txt  mathLib.h
cmake/example/libs/math/headers/: sqr.h
cmake/example/libs/math/src/: sqr.c
cmake/example/src/: main.c
cmake/example/templates/: settings.h.in
doc/: CONVERSION.md  HARDWARE.md  IDENTIFIERS.md  MEMORY MODEL.md  NAME SPACE.md  ORDER OF EVALUATION.md  POSIX.md  SCOPE AND LINKAGE.md  SHARED LIBRARIES.md  STORAGE DURATION.md  TRANSLATION UNIT.md
docs/: LABEL.md  OBJECTS.md  SCOPE AND LINKAGE.md  STATEMENT.md  STORAGE DURATION.md  TRANSLATION.md  VALUE CATEGORIES.md
lib/concepts/: README.md
lib/concepts/headers/: alignment.h  comments.h  scope.h  undefined.h
lib/concepts/src/: alignment.c  namespace.c  undefined.c
lib/expressions/headers/: generic.h
lib/operators/: README.md  operators.h
lib/operators/headers/: arithmetic.h  comparison.h  increment.h  other.h
lib/operators/src/: assignment.c  comparison.c  logical.c  member.c  other.c
lib/preprocessor/: README.md
lib/preprocessor/src/: conditionals.c  error.c  replacement.c
lib/statements/headers/: iteration.h  selection.h
lib/statements/src/: iteration.c
lib/types/headers/: enumeration.h  functions.h  integer.h  pointers.h
lib/types/src/: functions.c  pointers.c  typedef.c
libs/conceptsLibrary/: conceptsLibrary.h
libs/conceptsLibrary/headers/: namespace.h
libs/conceptsLibrary/src/: scope.c
libs/expressionsLibrary/: README.md  expressionsLibrary.h
libs/expressionsLibrary/headers/: compound.h
libs/expressionsLibrary/src/: compound.c  generic.c
libs/operatorsLibrary/headers/: assignment.h  logical.h  member.h
libs/operatorsLibrary/src/: arithmetic.c  increment.c
libs/preprocessorLibrary/: preprocessorLibrary.h
libs/preprocessorLibrary/headers/: conditionals.h  error.h  replacement.h
libs/statementsLibrary/: README.md  statementsLibrary.h
libs/statementsLibrary/headers/: jump.h
libs/statementsLibrary/src/: jump.c  selection.c
libs/typesLibrary/: README.md  typesLibrary.h
libs/typesLibrary/headers/: array.h  bitfield.h  boolean.h  character.h  floating.h  integer.h  qualifiers.h  structures.h  typedef.h  union.h
libs/typesLibrary/src/: array.c  functions.c
make/docs/: MAKE.md
make/example/: helper.c  helper.h  main.c  makefile
src/: main.c
