cmake_minimum_required(VERSION 3.17)
project(C C)
project(concepts C)
project(expressions C)
project(operators C)
project(preprocessor C)
project(statements C)
project(types C)

set(CMAKE_C_STANDARD 11)

add_library(concepts libs/concepts/concepts.h libs/concepts/headers/comments.h libs/concepts/src/scope.c libs/concepts/headers/scope.h libs/concepts/src/namespace.c libs/concepts/headers/namespace.h libs/concepts/src/alignment.c libs/concepts/headers/alignment.h libs/concepts/src/undefined.c libs/concepts/headers/undefined.h)
add_library(expressions libs/expressions/expressions.h libs/expressions/src/compound.c libs/expressions/headers/compound.h libs/expressions/src/generic.c libs/expressions/headers/generic.h)
add_library(operators libs/operators/operators.h libs/operators/src/assignment.c libs/operators/headers/assignment.h libs/operators/src/increment.c libs/operators/headers/increment.h libs/operators/src/arithmetic.c libs/operators/headers/arithmetic.h libs/operators/src/logical.c libs/operators/headers/logical.h libs/operators/src/comparison.c libs/operators/headers/comparison.h libs/operators/src/member.c libs/operators/headers/member.h libs/operators/src/other.c libs/operators/headers/other.h)
add_library(preprocessor libs/preprocessor/preprocessor.h libs/preprocessor/headers/conditionals.h libs/preprocessor/src/conditionals.c libs/preprocessor/headers/error.h libs/preprocessor/src/error.c libs/preprocessor/src/replacement.c libs/preprocessor/headers/replacement.h)
add_library(statements libs/statements/statements.h libs/statements/src/selection.c libs/statements/headers/selection.h libs/statements/src/iteration.c libs/statements/headers/iteration.h libs/statements/src/jump.c libs/statements/headers/jump.h)
add_library(types libs/types/types.h libs/types/types.h libs/types/headers/boolean.h libs/types/headers/character.h libs/types/headers/integer.h libs/types/headers/floating.h libs/types/headers/enumeration.h libs/types/headers/array.h libs/types/headers/structures.h libs/types/headers/union.h libs/types/headers/pointers.h libs/types/headers/qualifiers.h libs/types/src/array.c libs/types/src/pointers.c libs/types/headers/bitfield.h libs/types/src/typedef.c libs/types/headers/typedef.h libs/types/src/functions.c libs/types/headers/functions.h)
add_executable(C src/main.c)
